# coin_calc

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/coin_calc/: __main__.py
src/coin_calc/data/: values.txt
